--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body data-theme="dark">
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
